# did-indy-demo

./: .gitmodules  README.md  pyproject.toml
network/: .gitignore  docker-compose.yaml
network/node/: Dockerfile
test/: conftest.py  genesis.txn  test_diddoc_content.py
