[tool.poetry]
name = "did-indy-demo"
version = "0.1.0"
description = ""
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.1"
indy-vdr = { path = "./indy-vdr/wrappers/python", develop = true }
pytest-asyncio = "^0.18.3"
aries-askar = "^0.2.4"
base58 = "^2.1.1"
httpx = "^0.22.0"
colored = "^1.4.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
